Next batch of SFMC to MCE renames

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -14,13 +14,13 @@ import { Button } from '/src/components/Buttons.js';
 
 ## Marketing Cloud Engagement
 
-### Zen of SFMC
+### Zen of Marketing Cloud
 
 Salesforce Marketing Cloud is a complex and flexible tool. This combination is a dream-come-true set for enterprise Marketing Automation tools, but on the other hand, it enables mistakes and messy solutions. Find the right path to success through a best-practice fuelled checklist full of tool-based explanations and examples.
 
 <Button
-    link='/docs/salesforce/marketing-cloud-engagement/zen-of-sfmc/'
-    text='Read about Zen of SFMC'
+    link='/docs/salesforce/marketing-cloud-engagement/zen-of-marketing-cloud/'
+    text='Read about Zen of Marketing Cloud'
 />
 
 ### Server-Side JavaScript
