--- a/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/export-import-document-sfmc-roles.mdx
@@ -1,8 +1,8 @@
 ---
 id: export-import-document-sfmc-roles
-title: Export, Import & Document SFMC Roles
-sidebar_label: Export, Import & Document SFMC Roles
-description: Backup, clone, and move cross-account the Salesforce Marketing Cloud roles. In seconds.
+title: Export, Import & Document MCE Roles
+sidebar_label: Export, Import & Document MCE Roles
+description: Backup, clone, and move cross-account the Salesforce Marketing Cloud Engagement roles. In seconds.
 image: img/og/og-image-sf-mce-export-import-documents-roles.png
 tags: [JavaScript, Salesforce, Marketing Cloud Engagement, Marketing Automation, Configuration, Users, Setup]
 ---
@@ -10,7 +10,7 @@ tags: [JavaScript, Salesforce, Marketing Cloud Engagement, Marketing Automation,
 import { LeadText } from '/src/components/LeadText.js';
 import { Button } from '/src/components/Buttons.js';
 
-<LeadText content="Backup, clone, and move cross-account the Salesforce Marketing Cloud roles. In seconds." />
+<LeadText content="Backup, clone, and move cross-account the Salesforce Marketing Cloud Engagement roles. In seconds." />
 
 While you get a set of standard user Roles in Salesforce Marketing Cloud, those are rarely enough. Instead, they are the base on which you can create custom-tailored solutions that align with your business architecture.
 
