--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/mce-architecting-web-solutions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/mce-architecting-web-solutions.mdx
@@ -1,8 +1,8 @@
 ---
-id: sfmc-webinar-architecting-web-solutions
-title: Architecting Web Solutions in SFMC
+id: mce-architecting-web-solutions
+title: Architecting Web Solutions in MCE
 sidebar_label: Architecting Web Solutions
-description: Learn how to make the most out of Marketing Cloud Web Studio using best practices and tested architecture patterns for Cloud Pages and Code Resources.
+description: Learn how to make the most out of Marketing Cloud Engagement Web Studio using best practices and tested architecture patterns for Cloud Pages and Code Resources.
 image: img/og/og-image-webinar-sf-mce-architecting-web-solutions.png
 tags: [Webinar, Salesforce, Marketing Cloud Engagement, Marketing Automation, Best Practice, AMPScript, SSJS, JavaScript, Cloud Page]
 ---
@@ -10,7 +10,7 @@ tags: [Webinar, Salesforce, Marketing Cloud Engagement, Marketing Automation, Be
 import { LeadText } from '/src/components/LeadText.js';
 import { YouTube } from '/src/components/VideoEmbed.js';
 
-<LeadText content="Learn how to make the most out of Marketing Cloud Web Studio using best practices and tested architecture patterns for Cloud Pages and Code Resources." />
+<LeadText content="Learn how to make the most out of Marketing Cloud Engagement Web Studio using best practices and tested architecture patterns for Cloud Pages and Code Resources." />
 
 ## Table of Contents
 
@@ -25,11 +25,11 @@ import { YouTube } from '/src/components/VideoEmbed.js';
 
 ## Video
 
-<YouTube videoId="a8RPRvVOXak" title="Architecting Web Solutions in SFMC Webinar Recording" />
+<YouTube videoId="a8RPRvVOXak" title="Architecting Web Solutions in MCE Webinar Recording" />
 
 ## Materials
 
-14 June 2022 | Architecting Web Solutions in SFMC
+14 June 2022 | Architecting Web Solutions in MCE
 -- | --
 Recording | [YouTube](https://www.youtube.com/watch?v=a8RPRvVOXak&list=PLntZFZH56rSeuaF2vRaDPBIL6rH_vgLD3)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2022-05%5D%20Architecting%20Web%20Solutions%20in%20SFMC.pdf)
