--- a/docs/salesforce/marketing-cloud-engagement/config/webinars/mce-cloud-page-apps.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/webinars/mce-cloud-page-apps.mdx
@@ -1,8 +1,8 @@
 ---
-id: sfmc-webinar-cloud-page-apps
-title: SFMC Cloud Page Apps
+id: mce-cloud-page-apps
+title: MCE Cloud Page Apps
 sidebar_label: Cloud Page Apps
-description: Learn how and when to create a custom application for your SFMC users using Cloud Pages, Code Resources and Installed Packages.
+description: Learn how and when to create a custom application for your MCE users using Cloud Pages, Code Resources and Installed Packages.
 image: img/og/og-image-webinar-sf-mce-cloud-page-apps.png
 tags: [Webinar, Salesforce, Marketing Cloud Engagement, Marketing Automation, AppExchange, SSJS, Cloud Page, App, Snippet, Configuration]
 ---
@@ -10,11 +10,11 @@ tags: [Webinar, Salesforce, Marketing Cloud Engagement, Marketing Automation, Ap
 import { LeadText } from '/src/components/LeadText.js';
 import { YouTube } from '/src/components/VideoEmbed.js';
 
-<LeadText content="Learn how and when to create a custom application for your SFMC users using Cloud Pages, Code Resources and Installed Packages." />
+<LeadText content="Learn how and when to create a custom application for your MCE users using Cloud Pages, Code Resources and Installed Packages." />
 
 ## Table of Contents
 
-1. SFMC Solutioning 101 ([4:15](https://youtu.be/3ngC9OLKaEI?t=256))
+1. MCE Solutioning 101 ([4:15](https://youtu.be/3ngC9OLKaEI?t=256))
 2. Cloud Page App 101  ([12:11](https://youtu.be/3ngC9OLKaEI?t=731))
 3. AppExchange Menu Magic ([14:20](https://youtu.be/3ngC9OLKaEI?t=860))
 4. Cloud Page App SSO ([22:06](https://youtu.be/3ngC9OLKaEI?t=1326))
