Updated details on scheduled vs custom SM utilization report

--- a/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
@@ -100,7 +100,7 @@ Furthermore, some features add costs on top of the base Super Message consumptio
 
 #### Super Message Monitoring
 
-The fun part? There is no way to track it in the system. You won't find a Digital Wallet known from the Data Cloud. The only option is to ask your Account Executive for reports on Super Message utilization.
+The fun part? There is no way to track it in the system. You won't find a Digital Wallet known from the Data Cloud. The only option is to use scheduled email with monthly Super Messages utilization report that is sent to the Primary Contact on the account. You can also request a more detailed report from your Account Executive, but it will be a manual process.
 
 :::note You Should Know
 
@@ -118,7 +118,7 @@ Trust me, I tried.
 
 :::note You Should Know
 
-When requesting the Super Message report you can ask for some specific data points, like splitting the usage per Business Unit, or per Classification. It can be a great help in finding where your money is going and whether the ROI stands behind that spend.
+If the basic scheduled Super Messages utilization report is not enough, you can ask for some specific data points, like splitting the usage per Business Unit, or per Classification. It can be a great help in finding where your money is going and whether the ROI stands behind that spend.
 
 :::
 
