--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
@@ -369,7 +369,7 @@ SELECT
 FROM FebruaryEventParticipantsSegment AS feb
 ```
 
-Keep in mind that you will see the duplicates only if the target Data Extension doesn't have Primary Key defined on the duplicated value. Otherwise, the duplicates will be removed during the insert due to Subscriber Key uniquness violation.
+Keep in mind that you will see the duplicates only if the target Data Extension doesn't have Primary Key defined on the duplicated value. Otherwise, the duplicates will be removed during the insert due to Subscriber Key uniqueness violation.
 
 :::
 
