Updated draft of SF Marketing Products FAQ

--- a/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
+++ b/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
@@ -14,21 +14,25 @@ import { LeadText } from '/src/components/LeadText.js';
 
 ## Salesforce Marketing Cloud Landscape
 
+We are living in interesting times. Also when it comes to the Salesforce Marketing Cloud. The platform landscape is rapidly evolving, with new products being launched, old ones being retired, and all of them being renamed (multiple times). It can be hard to keep up with the changes and understand the differences between the various products. In this article, I will try to explain the current state of the Salesforce Marketing Cloud ecosystem, its main products, and their positioning and guesstimate the future.
+
 ### Salesforce Marketing Automation Products
 
 Salesforce currently offers three different Marketing Automation products under the Marketing Cloud umbrella, each targeting different audiences and use cases:
 
 ### Marketing Cloud Engagement (MCE)
 
-- Mature and feature-rich Marketing Automation platform
-- Extremely customisable and flexible but complex
-- Require technical skills to fully leverage its power
-- Vast ecosystem of third-party apps and integrations
+Marketing Cloud engagement is the oldest and most established of the three products. It is a robust and feature-rich platform that has been around for 25 years. It is designed for large enterprises and B2C companies with complex marketing needs.
+
+It's main unqiue selling point - not only among the Salesforce Marketing Automation products, but also in the broader Marketing Automation landscape - is its flexibility and customisability. It can be tailored to fit the specific needs of any business, no matter how complex.
+
+However, this flexibility comes at a cost - it can be challenging to set up and use, especially for non-technical users, and there are tons of (first party and third party) add-ons that bring various features and capabilities to the platform.
+
+
+
+
 - Strong community and resources
 - Can work as standalone or integrated with Salesforce CRM
-
-- B2C focused features
-- Enterprise & large businessnes
 - Large marketing teams with IT support
 
 ### Marketing Cloud Account Engagement (MCAE)
